--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,11 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.5.21'
+    id 'maia.build'
 }
 
 group 'maia'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     implementation "maia:maia-learner"
     api "maia:maia-configure"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-}
-
-sourceSets {
-    main.kotlin.srcDirs += 'src'
 }
